# arm-simulation

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.docker/: Dockerfile
src/robot_arm/: CMakeLists.txt  package.xml
src/robot_arm/launch/: arm.launch  bot.launch
src/robot_arm/src/: test_controller.py
src/robot_arm/urdf/: arm.urdf
src/robot_arm/yaml/: controllers.yaml
urdf/: mybot.urdf
